manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: comentarios
  namespace: comentarios
spec:
  selector:
    app: comentarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
