manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comentarios-ingress
  namespace: comentarios
spec:
  ingressClassName: nginx
  rules:
  - host: comentarios.avilait.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comentarios
            port:
              number: 80
